[1.3.6-prepare][Improvement][Docker&K8s] Improve docker and k8s #4875 #4887 #4900 #4902 #4962 #5002 (#5023)
* [1.3.6-prepare][Improvement][Docker&K8s] Improve docker and k8s #4875 #4887 #4900 #4902 #4962 #5002

* [1.3.6-prepare][Improvement][Docker&K8s] Support set logger jvm options by LOGGER_SERVER_OPTS

* [1.3.6-prepare][Improvement][Docker&K8s] Re-assign DATAX_HOME to /opt/soft/datax